<resources>
    <string name="app_name">ArrayLab</string>
    <string name="array">Массив:</string>
    <string name="array_data">[1,2,3]</string>
    <string name="delete_button">Удалить элемент</string>
    <string name="delete_label">Удалить элемент №:</string>
    <string name="new_array_button">Сгенерировать новый массив</string>
    <string name="array_size">Размер массива:</string>
</resources>
